[INJIWEB-1715] - Implement credential request and sharing flow (#438)
* [INJIWEB-1715] - Implement credential request and sharing flow

- Add CredentialRequestModal for verifier credential requests
- Add NoMatchingCredentialsModal for empty wallet scenarios
- Add ErrorCard and LoadingModal for better UX
- Add CredentialItem component with selection functionality
- Add comprehensive error handling utilities
- Add API integration for credential presentation
- Add responsive design with mobile/desktop layouts
- Add i18n support for all modal text
- Add accessibility features and test IDs

Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

* [INJIWEB-1715] - Resolve Review Comments
- Add credential request modal with selection functionality
- Add error handling and loading states
- Add multi-language support for all modals
- Add API integration for credential presentation
- Update credential components with enhanced UX

Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

* [INJIWEB-1715] - Add comprehensive test coverage for credential modals

- Add tests for CredentialRequestModal, ErrorCard, LoadingModal
- Add tests for NoMatchingCredentialsModal
- Update CredentialTypesPage and StoredCardsPage tests
- Update CredentialList component tests

Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

* [INJIWEB-1715] - - Fix ErrorCard edge case tests to use correct prop behavior
- Remove invalid zIndex test from LoadingModal (non-existent prop)
- Fix LoadingModal test assertions to use actual test IDs
- Make NoMatchingCredentialsModal defensive against undefined callbacks

Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

* [INJIWEB-1715] - Add missing @testing-library/dom peer dependency
- Fix LoadingModal test indentation consistency
- Improve CredentialList fallback semantics and safe defaults
- Implement missingClaims display in NoMatchingCredentialsModal
- Add proper API error handling to prevent inconsistent state

Signed-off-by: kongadurgesh <kongadur

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -512,5 +512,31 @@
       "title": "جلب معلومات المدقق...",
       "subtitle": "يرجى الانتظار بينما نتحقق من صحة الطلب ونجهز بيانات الاعتماد الخاصة بك."
     }
+  },
+  "CredentialRequestModal": {
+    "loading": {
+      "title": "تحميل بيانات الاعتماد",
+      "message": "يرجى الانتظار بينما نجلب بيانات الاعتماد المتاحة لديك..."
+    },
+    "header": {
+      "title": "{{verifierName}} يطلب هذه بيانات الاعتماد",
+      "description": "اختر بيانات الاعتماد التي تريد مشاركتها"
+    },
+    "error": {
+      "title": "خطأ في تحميل بيانات الاعتماد",
+      "walletIdMessage": "يرجى التأكد من تسجيل الدخول وفتح محفظتك."
+    },
+    "noCredentials": {
+      "message": "لا توجد بيانات اعتماد متاحة"
+    },
+    "buttons": {
+      "cancel": "إلغاء",
+      "consentShare": "أوافق وأشارك"
+    }
+  },
+  "NoMatchingCredentialsModal": {
+    "title": "لم يتم العثور على بيانات اعتماد مطابقة",
+    "description": "يرجى تحميل بيانات الاعتماد المقابلة وإعادة محاولة عملية المشاركة",
+    "goToHomeButton": "الذهاب إلى الصفحة الرئيسية"
   }
 }
