--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -512,5 +512,31 @@
       "title": "ವಿತರಣೆದಾರರ ಮಾಹಿತಿಯನ್ನು ಪಡೆಯಲಾಗುತ್ತಿದೆ...",
       "subtitle": "ದಯವಿಟ್ಟು ನಾವು ವಿನಂತಿಯನ್ನು ಪರಿಶೀಲಿಸಿ ಮತ್ತು ನಿಮ್ಮ ರುಜುವಾತುಗಳನ್ನು ಸಿದ್ಧಪಡಿಸುವವರೆಗೆ ಕಾಯಿರಿ."
     }
+  },
+  "CredentialRequestModal": {
+    "loading": {
+      "title": "ರುಜುವಾತುಗಳನ್ನು ಲೋಡ್ ಮಾಡಲಾಗುತ್ತಿದೆ",
+      "message": "ದಯವಿಟ್ಟು ನಾವು ನಿಮ್ಮ ಲಭ್ಯವಿರುವ ರುಜುವಾತುಗಳನ್ನು ತರುವವರೆಗೆ ಕಾಯಿರಿ..."
+    },
+    "header": {
+      "title": "{{verifierName}} ಈ ರುಜುವಾತುಗಳನ್ನು ವಿನಂತಿಸುತ್ತಿದೆ",
+      "description": "ನೀವು ಯಾವ ರುಜುವಾತುಗಳನ್ನು ಹಂಚಿಕೊಳ್ಳಲು ಬಯಸುತ್ತೀರಿ ಎಂಬುದನ್ನು ಆಯ್ಕೆಮಾಡಿ"
+    },
+    "error": {
+      "title": "ರುಜುವಾತುಗಳನ್ನು ಲೋಡ್ ಮಾಡುವಲ್ಲಿ ದೋಷ",
+      "walletIdMessage": "ದಯವಿಟ್ಟು ನೀವು ಲಾಗ್ ಇನ್ ಆಗಿದ್ದೀರಿ ಮತ್ತು ನಿಮ್ಮ ವ್ಯಾಲೆಟ್ ಅನ್ಲಾಕ್ ಆಗಿದೆ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ."
+    },
+    "noCredentials": {
+      "message": "ಯಾವುದೇ ರುಜುವಾತುಗಳು ಲಭ್ಯವಿಲ್ಲ"
+    },
+    "buttons": {
+      "cancel": "ರದ್ದುಗೊಳಿಸಿ",
+      "consentShare": "ನಾನು ಒಪ್ಪುತ್ತೇನೆ ಮತ್ತು ಹಂಚಿಕೊಳ್ಳುತ್ತೇನೆ"
+    }
+  },
+  "NoMatchingCredentialsModal": {
+    "title": "ಹೊಂದಾಣಿಕೆಯ ರುಜುವಾತುಗಳು ಕಂಡುಬಂದಿಲ್ಲ",
+    "description": "ದಯವಿಟ್ಟು ಸಂಬಂಧಿತ ರುಜುವಾತುಗಳನ್ನು ಡೌನ್ಲೋಡ್ ಮಾಡಿ ಮತ್ತು ಹಂಚಿಕೆ ಪ್ರಕ್ರಿಯೆಯನ್ನು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ",
+    "goToHomeButton": "ಮನೆಗೆ ಹೋಗಿ"
   }
 }
