injiweb-1726-branding-changes resolved code rabbit comments
Signed-off-by: cyber_titan <saiabhi2309@gmail.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -67,7 +67,7 @@
       "loginDescription": "قم بتسجيل الدخول باستخدام حسابك أو تابع كضيف للوصول إلى بيانات الاعتماد الخاصة بك.",
       "loginNote": "قد تكون بعض الميزات محدودة في وضع الضيف.",
       "loggingIn": "تسجيل الدخول",
-      "loginGoogle": "تواصل مع جوجل",
+      "loginGoogle": "تابع باستخدام Google",
       "loginGuest": "الاستمرار كضيف"
     },
     "LoginFailedModal": {
