--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -33,7 +33,7 @@
       "heading": "உங்கள் ஆவணங்கள் ஒரு விநாடியில் பதிவிறக்கப்பட்டன",
       "item1": "நம்பிக்கையுடன் பதிவிறக்கவும்",
       "description1": "உங்கள் முக்கிய ஆவணங்களை உடனடியாக சேமிக்கவும்",
-      "item2": "பாதுகாப்பான மற்றும் ஒலி",
+      "item2": "பாதுகாப்பாகவும் நிம்மதியாகவும்",
       "description2": "ஒரே பாதுகாப்பான இடத்தில் ஐடிக்கள், உரிமங்கள் மற்றும் பலவற்றை பதிவிறக்கவும்."
     },
     "FeatureItem3": {
