Injiweb 1726 branding changes (#440)
* injiweb-1726-branding-changes changes acc to first style guide

Signed-off-by: cyber_titan <saiabhi2309@gmail.com>

* injiweb-1726-branding-changes updated ui acc to new guide

Signed-off-by: cyber_titan <saiabhi2309@gmail.com>

* injiweb-1726-branding-changes resolved code rabbit comments

Signed-off-by: cyber_titan <saiabhi2309@gmail.com>

* injiweb-1726-branding-changes updated snaps

Signed-off-by: cyber_titan <saiabhi2309@gmail.com>

* injiweb-1726-branding-changes resolved comments by code rabbit

Signed-off-by: cyber_titan <saiabhi2309@gmail.com>

---------

Signed-off-by: cyber_titan <saiabhi2309@gmail.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -24,51 +24,51 @@
     },
     "FeatureItem1": {
       "heading": "الوصول إلى بياناتك في أي مكان تحتاجه",
-      "item1": "تبسيط البيانات",
+      "item1": "بيانات الاعتماد مبسطة",
       "description1": "احتفظ بجميع مستنداتك الأساسية",
-      "item2": "لا مزيد من الأوراق. كل شيء في مكان واحد",
+      "item2": "لا مزيد من الأعمال الورقية، كل شيء في مكان واحد",
       "description2": "قم بتنزيل وتخزين واسترجاع مستنداتك بسهولة. فوز، فوز، فوز."
     },
     "FeatureItem2": {
       "heading": "تنزيل مستنداتك في ثانية",
-      "item1": "تنزيل بثقة",
+      "item1": "قم بالتنزيل بثقة",
       "description1": "احفظ مستنداتك الهامة فورًا",
-      "item2": "آمن وسليم",
+      "item2": "آمنة وسليمة",
       "description2": "قم بتنزيل الهويات والتراخيص والمزيد في مكان آمن واحد."
     },
     "FeatureItem3": {
       "heading": "مشاركة سهلة",
-      "item1": "شارك باستخدام رمز QR",
+      "item1": "شارك باستخدام رمز الاستجابة السريعة",
       "description1": "شارك هوياتك وشهاداتك بسهولة أثناء التنقل. فقط قدم رمز QR لمستندك ليتم مسحه ومشاركته.",
       "item2": "اقرأ، اضبط، شارك",
       "description2": "تم التحقق من رمز QR في الوقت الفعلي."
     },
     "FeatureItem4": {
       "heading": "آمن وخاص",
-      "item1": "بياناتك محمية",
+      "item1": "بيانات اعتمادك محمية",
       "description1": "تبقى بياناتك خاصة بفضل آلية الأمان المدمجة.",
-      "item2": "استرخ",
+      "item2": "راحة سهلة",
       "description2": "احتفظ ببياناتك آمنة، حتى تتمكن من التركيز على ما يهم."
     },
     "FeatureItem5": {
       "heading": "وصول أوسع وتوافق",
       "item1": "متاح على متصفحك المفضل",
       "description1": "تعمل محفظة Inji مع Chrome و Safari و Firefox و Edge.",
-      "item2": "دائمًا في متناول اليد",
+      "item2": "دائما في متناول اليد",
       "description2": "تلتقي الراحة مع الوصول أينما كنت، مما يضمن أن مستنداتك دائمًا في متناول اليد."
     },
     "QuickTip": {
       "heading": "نصائح سريعة لتنزيل بياناتك فورًا",
       "toastText": "قريباً",
-      "buttontext": "انقر هنا"
+      "buttontext": "يتعلم أكثر"
     },
     "Login": {
       "loginTitle": "تسجيل الدخول",
       "loginDescription": "قم بتسجيل الدخول باستخدام حسابك أو تابع كضيف للوصول إلى بيانات الاعتماد الخاصة بك.",
       "loginNote": "قد تكون بعض الميزات محدودة في وضع الضيف.",
-      "loggingIn": "جاري تسجيل الدخول",
-      "loginGoogle": "متابعة باستخدام Google",
-      "loginGuest": "متابعة كزائر"
+      "loggingIn": "تسجيل الدخول",
+      "loginGoogle": "تابع باستخدام Google",
+      "loginGuest": "الاستمرار كضيف"
     },
     "LoginFailedModal": {
       "failureMessage": "فشل تسجيل الدخول",
@@ -83,8 +83,8 @@
     }
   },
   "PasscodePage": {
-    "submit": "إرسال",
-    "submitting": "جاري الإرسال",
+    "submit": "يُقدِّم",
+    "submitting": "تقديم",
     "setPasscode": "قم بتعيين رمز المرور للبدء",
     "setPasscodeDescription": "يرجى تذكر رمز المرور الخاص بك أو تخزينه بأمان. ستحتاج إليه في كل مرة تصل فيها إلى المحفظة.",
     "enterPasscode": "أدخل رمز المرور للمتابعة",
@@ -141,7 +141,7 @@
       "title": "الوصول إلى بيانات الاعتماد التي يمكن التحقق منها",
       "title2": "بكل سهولة!",
       "subTitle": "قم بتنزيل بيانات الاعتماد الخاصة بك ومشاركتها بشكل آمن على الفور.",
-      "searchText": "بحث المصدرين بالاسم"
+      "searchText": "البحث عن الجهات المصدرة حسب الاسم"
     },
     "emptyContainerContent": "لم يتم العثور على جهات الإصدار. ",
     "containerHeading": "قائمة المصدرين",
