--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -24,50 +24,50 @@
     },
     "FeatureItem1": {
       "heading": "ನಿಮ್ಮ ಕ್ರೆಡೆನ್ಶಿಯಲ್ಗಳನ್ನು ಎಲ್ಲೆಡೆ ಪ್ರವೇಶಿಸಿ",
-      "item1": "ಕ್ರೆಡೆನ್ಶಿಯಲ್ಗಳನ್ನು ಸರಳಗೊಳಿಸಲಾಗಿದೆ",
+      "item1": "ರುಜುವಾತುಗಳನ್ನು ಸರಳೀಕರಿಸಲಾಗಿದೆ",
       "description1": "ನಿಮ್ಮ ಎಲ್ಲಾ ಅಗತ್ಯ ಡಾಕ್ಯುಮೆಂಟ್‌ಗಳನ್ನು ಇಟ್ಟುಕೊಳ್ಳಿ",
-      "item2": "ಇನ್ನು ಕಾಗದದ ಕೆಲಸವಿಲ್ಲ. ಎಲ್ಲವೂ ಒಂದೇ ಸ್ಥಳದಲ್ಲಿ",
+      "item2": "ಇನ್ನು ಮುಂದೆ ಕಾಗದಪತ್ರಗಳ ಅಗತ್ಯವಿಲ್ಲ, ಎಲ್ಲವೂ ಒಂದೇ ಸ್ಥಳದಲ್ಲಿ",
       "description2": "ನಿಮ್ಮ ಡಾಕ್ಯುಮೆಂಟ್‌ಗಳನ್ನು ಸುಲಭವಾಗಿ ಡೌನ್‌ಲೋಡ್ ಮಾಡಿ, ಸಂಗ್ರಹಿಸಿ ಮತ್ತು ಪುನಃಪ್ರಾಪ್ತಿಮಾಡಿ. ಗೆಲುವು, ಗೆಲುವು, ಗೆಲುವು."
     },
     "FeatureItem2": {
       "heading": "ನಿಮ್ಮ ಡಾಕ್ಯುಮೆಂಟ್‌ಗಳನ್ನು ಸೆಕೆಂಡಿನಲ್ಲಿ ಡೌನ್‌ಲೋಡ್ ಮಾಡಲಾಗಿದೆ",
       "item1": "ಆತ್ಮವಿಶ್ವಾಸದಿಂದ ಡೌನ್‌ಲೋಡ್ ಮಾಡಿ",
       "description1": "ನಿಮ್ಮ ಪ್ರಮುಖ ಡಾಕ್ಯುಮೆಂಟ್‌ಗಳನ್ನು ತಕ್ಷಣ ಉಳಿಸಿ",
-      "item2": "ಸುರಕ್ಷಿತ ಮತ್ತು ಸುರಕ್ಷಿತ",
+      "item2": "ಸುರಕ್ಷಿತ ಮತ್ತು ಧ್ವನಿ",
       "description2": "ಐಡಿಗಳು, ಪರವಾನಗಿಗಳು ಮತ್ತು ಇನ್ನಷ್ಟು, ಒಂದೇ ಸುರಕ್ಷಿತ ಸ್ಥಳದಲ್ಲಿ ಡೌನ್‌ಲೋಡ್ ಮಾಡಿ."
     },
     "FeatureItem3": {
       "heading": "ಸುಲಭ ಹಂಚಿಕೆ",
-      "item1": "QR ಕೋಡ್‌ನೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳಿ",
+      "item1": "QR ಕೋಡ್ ಮೂಲಕ ಹಂಚಿಕೊಳ್ಳಿ",
       "description1": "ನಿಮ್ಮ ಐಡಿಗಳು ಮತ್ತು ಪ್ರಮಾಣಪತ್ರಗಳನ್ನು ಸುಲಭವಾಗಿ ಹಂಚಿಕೊಳ್ಳಿ. ನಿಮ್ಮ ಡಾಕ್ಯುಮೆಂಟ್‌ನ QR ಕೋಡ್ ಅನ್ನು ಸ್ಕ್ಯಾನ್ ಮತ್ತು ಹಂಚಿಕೊಳ್ಳಲು ಪ್ರಸ್ತುತಪಡಿಸಿ.",
       "item2": "ಓದಿ, ಸೆಟ್ ಮಾಡಿ, ಹಂಚಿಕೊಳ್ಳಿ",
       "description2": "QR ಕೋಡ್ ಅನ್ನು ರಿಯಲ್ ಟೈಮ್‌ನಲ್ಲಿ ಪರಿಶೀಲಿಸಲಾಗಿದೆ."
     },
     "FeatureItem4": {
       "heading": "ಸುರಕ್ಷಿತ ಮತ್ತು ಖಾಸಗಿ",
-      "item1": "ನಿಮ್ಮ ಕ್ರೆಡೆನ್ಶಿಯಲ್ಗಳು, ರಕ್ಷಿಸಲಾಗಿದೆ",
+      "item1": "ನಿಮ್ಮ ರುಜುವಾತುಗಳನ್ನು ರಕ್ಷಿಸಲಾಗಿದೆ",
       "description1": "ನಿಮ್ಮ ಡೇಟಾ ಖಾಸಗಿವಾಗಿರುತ್ತದೆ, ಅಂತರ್ನಿಹಿತ ಭದ್ರತಾ ಯಂತ್ರಾಂಶದೊಂದಿಗೆ.",
-      "item2": "ಆರಾಮವಾಗಿರಿ",
+      "item2": "ಆರಾಮವಾಗಿ ವಿಶ್ರಾಂತಿ ಪಡೆಯಿರಿ",
       "description2": "ನಿಮ್ಮ ಕ್ರೆಡೆನ್ಶಿಯಲ್ಗಳನ್ನು ಸುರಕ್ಷಿತವಾಗಿರಿಸಿ, ಆದ್ದರಿಂದ ನೀವು ಮುಖ್ಯ ವಿಷಯಗಳ ಮೇಲೆ ಗಮನಹರಿಸಬಹುದು."
     },
     "FeatureItem5": {
       "heading": "ವಿಸ್ತೃತ ಪ್ರವೇಶ ಮತ್ತು ಹೊಂದಾಣಿಕೆ",
-      "item1": "ನಿಮ್ಮ ಮೆಚ್ಚಿನ ಬ್ರೌಸರ್‌ನಲ್ಲಿ ಲಭ್ಯವಿದೆ",
+      "item1": "ನಿಮ್ಮ ನೆಚ್ಚಿನ ಬ್ರೌಸರ್‌ನಲ್ಲಿ ಲಭ್ಯವಿದೆ",
       "description1": "ಇಂಜಿ ವ್ಯಾಲೆಟ್ ಕ್ರೋಮ್, ಸಫಾರಿ, ಫೈರ್ಫಾಕ್ಸ್ ಮತ್ತು ಎಡ್ಜ್ ನೊಂದಿಗೆ ಕಾರ್ಯನಿರ್ವಹಿಸುತ್ತದೆ.",
-      "item2": "ಯಾವಾಗಲೂ ತಲುಪುವ ಅಂತರದಲ್ಲಿ",
+      "item2": "ಯಾವಾಗಲೂ ಕೈಗೆಟುಕುತ್ತದೆ",
       "description2": "ನೀವು ಎಲ್ಲಿದ್ದರೂ ಸೌಲಭ್ಯ ಮತ್ತು ಪ್ರವೇಶವನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ, ನಿಮ್ಮ ಡಾಕ್ಯುಮೆಂಟ್‌ಗಳು ಯಾವಾಗಲೂ ತಲುಪುವ ಅಂತರದಲ್ಲಿರುತ್ತವೆ."
     },
     "QuickTip": {
       "heading": "ನಿಮ್ಮ ಕ್ರೆಡೆನ್ಶಿಯಲ್ಗಳನ್ನು ತಕ್ಷಣ ಡೌನ್‌ಲೋಡ್ ಮಾಡಲು ತ್ವರಿತ ಸಲಹೆಗಳು",
       "toastText": "ಶೀಘ್ರದಲ್ಲೇ ಬರಲಿದೆ",
-      "buttontext": "ಇಲ್ಲಿ ಕ್ಲಿಕ್ ಮಾಡಿ"
+      "buttontext": "ಇನ್ನಷ್ಟು ತಿಳಿಯಿರಿ"
     },
     "Login": {
       "loginTitle": "ಲಾಗಿನ್ ಮಾಡಿ",
       "loginDescription": "ನಿಮ್ಮ ಖಾತೆಯನ್ನು ಬಳಸಿಕೊಂಡು ಲಾಗಿನ್ ಮಾಡಿ ಅಥವಾ ನಿಮ್ಮ ಗುರುತುಗಳಿಗೆ ಪ್ರವೇಶಿಸಲು ಅತಿಥಿಯಾಗಿ ಮುಂದುವರೆಯಿರಿ.",
       "loginNote": "ಅತಿಥಿ ಮೋಡ್‌ನಲ್ಲಿ ಕೆಲವು ವೈಶಿಷ್ಟ್ಯಗಳು ಸೀಮಿತವಾಗಿರಬಹುದು.",
       "loggingIn": "ಲಾಗಿನ್ ಆಗುತ್ತಿದೆ",
-      "loginGoogle": "Google ಮೂಲಕ ಮುಂದುವರಿಯಿರಿ",
+      "loginGoogle": "Google ನೊಂದಿಗೆ ಮುಂದುವರಿಯಿರಿ",
       "loginGuest": "ಅತಿಥಿಯಾಗಿ ಮುಂದುವರಿಯಿರಿ"
     },
     "LoginFailedModal": {
@@ -83,8 +83,8 @@
     }
   },
   "PasscodePage": {
-    "submit": "ಸಮರ್ಪಿಸಿ",
-    "submitting": "ಸಮರ್ಪಿಸಲಾಗುತ್ತಿದೆ",
+    "submit": "ಸಲ್ಲಿಸಿ",
+    "submitting": "ಸಲ್ಲಿಸಲಾಗುತ್ತಿದೆ",
     "setPasscode": "ಪ್ರಾರಂಭಿಸಲು ನಿಮ್ಮ ಪಾಸ್‌ಕೋಡ್ ಹೊಂದಿಸಿ",
     "setPasscodeDescription": "ದಯವಿಟ್ಟು ನಿಮ್ಮ ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ನೆನಪಿಡಿ ಅಥವಾ ಸುರಕ್ಷಿತವಾಗಿ ಸಂಗ್ರಹಿಸಿ. ಪ್ರತಿ ಬಾರಿ ವಾಲೆಟ್ ಪ್ರವೇಶಿಸಲು ನಿಮಗೆ ಇದನ್ನು ಅಗತ್ಯವಿರುತ್ತದೆ.",
     "enterPasscode": "ಮುಂದುವರೆಯಲು ನಿಮ್ಮ ಪಾಸ್‌ಕೋಡ್ ನಮೂದಿಸಿ",
