--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -24,30 +24,30 @@
     },
     "FeatureItem1": {
       "heading": "अपने क्रेडेंशियल्स को कहीं भी एक्सेस करें",
-      "item1": "क्रेडेंशियल्स को सरल बनाएं",
+      "item1": "क्रेडेंशियल सरलीकृत",
       "description1": "अपने सभी आवश्यक दस्तावेज़ रखें।",
-      "item2": "अब कोई कागजी कार्रवाई नहीं। सब कुछ एक ही जगह पर",
+      "item2": "अब कोई कागजी कार्रवाई नहीं, सब एक ही जगह",
       "description2": "अपने दस्तावेज़ों को आसानी से डाउनलोड, स्टोर और पुनः प्राप्त करें। जीत, जीत, जीत।"
     },
     "FeatureItem2": {
       "heading": "आपके दस्तावेज़ सेकंड में डाउनलोड किए गए",
       "item1": "आत्मविश्वास के साथ डाउनलोड करें",
       "description1": "अपने महत्वपूर्ण दस्तावेज़ों को तुरंत सहेजें।",
-      "item2": "सुरक्षित और सुरक्षित",
+      "item2": "सही सलामत",
       "description2": "आईडी, लाइसेंस और अधिक को एक सुरक्षित स्थान पर डाउनलोड करें।"
     },
     "FeatureItem3": {
       "heading": "आसान साझाकरण",
-      "item1": "क्यूआर कोड के साथ साझा करें",
+      "item1": "QR कोड के साथ साझा करें",
       "description1": "अपने आईडी और प्रमाणपत्रों को चलते-फिरते सहजता से साझा करें। बस अपने दस्तावेज़ का क्यूआर कोड प्रस्तुत करें, जिसे स्कैन और साझा किया जा सके।",
       "item2": "पढ़ें, सेट करें, साझा करें",
       "description2": "क्यूआर कोड को वास्तविक समय में सत्यापित किया गया।"
     },
     "FeatureItem4": {
       "heading": "सुरक्षित और निजी",
-      "item1": "आपके क्रेडेंशियल्स, संरक्षित",
+      "item1": "आपकी साख सुरक्षित है",
       "description1": "आपका डेटा निजी रहता है, अंतर्निहित सुरक्षा तंत्र के साथ।",
-      "item2": "आराम से रहें",
+      "item2": "शेष सहज",
       "description2": "अपने क्रेडेंशियल्स को सुरक्षित रखें, ताकि आप महत्वपूर्ण चीजों पर ध्यान केंद्रित कर सकें।"
     },
     "FeatureItem5": {
@@ -60,7 +60,7 @@
     "QuickTip": {
       "heading": "अपने क्रेडेंशियल्स को तुरंत डाउनलोड करने के लिए त्वरित सुझाव",
       "toastText": "जल्द आ रहा है",
-      "buttontext": "यहां क्लिक करें"
+      "buttontext": "और अधिक जानें"
     },
     "Login": {
       "loginTitle": "लॉग इन करें",
@@ -141,7 +141,7 @@
       "title": "अपने सत्यापन योग्य क्रेडेंशियल्स तक",
       "title2": "आसानी से पहुंचें!",
       "subTitle": "अपने क्रेडेंशियल्स को सुरक्षित रूप से डाउनलोड करें और तुरंत साझा करें।",
-      "searchText": "जारीकर्ताओं को नाम से खोजें"
+      "searchText": "नाम से जारीकर्ता खोजें"
     },
     "emptyContainerContent": "कोई जारीकर्ता नहीं मिला. ",
     "containerHeading": "जारीकर्ताओं की सूची",
@@ -424,7 +424,7 @@
     },
     "emptyScreen": {
       "title": "कोई कार्ड संग्रहीत नहीं!",
-      "actionText": "आपने अभी तक कोई कार्ड डाउनलोड नहीं किया है। आरंभ करने के लिए \"कार्ड जोड़ें\" पर टैप करें।"
+      "actionText": "आपने अभी तक कोई कार्ड डाउनलोड नहीं किया है। शुरू करने के लिए \"कार्ड जोड़ें\" पर टैप करें।"
     },
     "search": {
       "placeholder": "नाम से अपने कार्ड खोजें",
