--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -162,7 +162,7 @@
     "errorContent": "الخدمة غير متاحة حالياً.",
     "errors": {
       "authorizationGrantTypeNotSupportedByWallet": {
-        "title": "نوع المنحة غير مدعوم خطأ في التفويض!",
+        "code": "نوع المنحة غير مدعوم خطأ في التفويض!",
         "message": "شكرًا على صبرك! نحن نواجه صعوبات تقنية في الوقت الحالي. يُرجى المحاولة مرة أخرى لاحقًا أو الاتصال بالمسؤول للحصول على مزيد من المساعدة!"
       }
     }
