Injiweb 1717 - ui-results-redirect-negative-flows (#442)
* [INJIWEB-1717] - Added the LoadingModalLandscape

Signed-off-by: Rudhhi Shah <rudhhi.shah@thoughtworks.com>
Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

* [INJIWEB-1717] - Added RedirectionButton with and test for CredentialShareSuccessModal

Signed-off-by: Rudhhi Shah <rudhhi.shah@thoughtworks.com>
Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

* [INJIWEB-1717] - Added SharedCredentialListWrapper for CredentialShareSuccessModal

Signed-off-by: Rudhhi Shah <rudhhi.shah@thoughtworks.com>
Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

* [INJIWEB-1717] - Added CredentialShareSuccessModal component

Signed-off-by: Rudhhi Shah <rudhhi.shah@thoughtworks.com>
Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

* Added SuccessIcon component and integrated in CredentialShareSuccessModal

Signed-off-by: Rudhhi Shah <rudhhi.shah@thoughtworks.com>
Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

* [INJIWEB-1717] Integrated with the workflow of injiweb-1715

Signed-off-by: Rudhhi Shah <rudhhi.shah@thoughtworks.com>
Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

* [INJIWEB-1717] Restored CredentialList & added PresentationCredentialList

Signed-off-by: Rudhhi Shah <rudhhi.shah@thoughtworks.com>
Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

* [INJIWEB-1717] Added API Error Handling to show appropriate ErrorCard in CredentialShareHandler

Signed-off-by: Rudhhi Shah <rudhhi.shah@thoughtworks.com>
Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

* [INJIWEB-1715] - Restructure credential components

- Add new CredentialItemsList component
- Refactor CredentialList, CredentialItem, and modal components
- Update test snapshots for credential flow

Signed-off-by: kongadurgesh <kongadurgesh20@gmail.com>

* [INJIWEB-1715] - Update credential modal styles and clean up types

- Refactor CredentialRequestModalStyles
- Remove unused type definitions from components.d.ts


--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -162,7 +162,7 @@
     "errorContent": "الخدمة غير متاحة حالياً.",
     "errors": {
       "authorizationGrantTypeNotSupportedByWallet": {
-        "title": "نوع المنحة غير مدعوم خطأ في التفويض!",
+        "code": "نوع المنحة غير مدعوم خطأ في التفويض!",
         "message": "شكرًا على صبرك! نحن نواجه صعوبات تقنية في الوقت الحالي. يُرجى المحاولة مرة أخرى لاحقًا أو الاتصال بالمسؤول للحصول على مزيد من المساعدة!"
       }
     }
@@ -395,6 +395,14 @@
     "metrics": "مرات",
     "success": "يتابع",
     "cancel": "يلغي"
+  },
+  "LoadingModalLandscape": {
+    "message": "جارٍ إعداد عرض بيانات اعتمادك الآمن..."
+  },
+  "CredentialShareSuccessModal": {
+    "sharedWith": "تمت المشاركة مع {{verifierName}}",
+    "credentialsPresented": "تم تقديم بيانات اعتمادك بنجاح إلى {{verifierName}}",
+    "redirectMessage": "إعادة التوجيه إلى المحقق خلال {{count}} ثانية..."
   },
   "User": {
     "Home": {
