--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -396,6 +396,14 @@
     "success": "Proceed",
     "cancel": "Cancel"
   },
+  "LoadingModalLandscape": {
+    "message": "Preparing your secure credential presentation..."
+  },
+  "CredentialShareSuccessModal": {
+    "sharedWith": "Shared with {{verifierName}}",
+    "credentialsPresented": "Your credentials were successfully presented to {{verifierName}}",
+    "redirectMessage": "Redirecting to verifier in {{count}} seconds..."
+  },
   "User": {
     "Home": {
       "title": "Home",
@@ -483,7 +491,7 @@
   "VerifierTrustPage": {
       "modal": {
         "title": "Verifier Name",
-        "description": "Make sure you recognize or trust this verifier. \nOnce you trust this Verifier:",
+        "description": "Make sure you recognize or trust this verifier. \nOnce you trust this verifier:",
         "benefitSaveSecurely": "The card will be securely saved in your wallet.",
         "benefitAddToTrustedList": "This verifier will be added to your trusted list.",
         "benefitSkipReviewFuture": "You won’t need to review trust again when downloading from them next time.",
