--- a/inji-web/src/locales/pt.json
+++ b/inji-web/src/locales/pt.json
@@ -396,6 +396,14 @@
     "success": "Prosseguir",
     "cancel": "Cancelar"
   },
+  "LoadingModalLandscape": {
+    "message": "Preparando sua apresentação de credencial segura..."
+  },
+  "CredentialShareSuccessModal": {
+    "sharedWith": "Compartilhado com {{verifierName}}",
+    "credentialsPresented": "Suas credenciais foram apresentadas com sucesso a {{verifierName}}",
+    "redirectMessage": "Redirecionando para o verificador em {{count}} segundos..."
+  },
   "User": {
     "Home": {
       "title": "Lar",
