injiweb-1726 added test id for guest login
Signed-off-by: cyber_titan <saiabhi2309@gmail.com>

--- a/inji-web/src/locales/en.json
+++ b/inji-web/src/locales/en.json
@@ -68,7 +68,7 @@
       "loginNote":"Some features may be limited in guest mode.",
       "loggingIn":"Logging In",
       "loginGoogle":"Continue With Google",
-      "loginGuest":"Continue As Guest"
+      "loginGuest":"Continue as Guest"
     },
     "LoginFailedModal":{
       "failureMessage":"Login Failed",
