[INJIWEB-1735] Updated the Trusted Verifier screen content
Signed-off-by: Rudhhi Shah <rudhhi.shah@thoughtworks.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -491,7 +491,7 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "مدقق غير معروف",
-      "description": "تأكد من أنك تتعرف على هذا المدقق أو تثق به. \nبمجرد أن تثق بهذا المدقق:",
+      "description": "تأكد من أنك تتعرّف على هذا المُصدر أو تثق به. \nبمجرد أن تثق بهذا الموثّق:",
       "benefitSaveSecurely": "سيتم حفظ البطاقة بأمان في محفظتك.",
       "benefitAddToTrustedList": "ستتم إضافة هذا المدقق إلى قائمة الثقة الخاصة بك.",
       "benefitSkipReviewFuture": "لن تحتاج إلى مراجعة الثقة مرة أخرى عند التنزيل منهم في المرة القادمة.",
