--- a/inji-web/src/locales/fr.json
+++ b/inji-web/src/locales/fr.json
@@ -491,7 +491,7 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "Vérificateur inconnu",
-      "description": "Assurez-vous de reconnaître ou de faire confiance à ce vérificateur. \nUne fois que vous faites confiance à ce vérificateur :",
+      "description": "Assurez-vous de reconnaître ou de faire confiance à cet Émetteur. \nUne fois que vous faites confiance à ce Vérificateur:",
       "benefitSaveSecurely": "La carte sera enregistrée en toute sécurité dans votre portefeuille.",
       "benefitAddToTrustedList": "Ce vérificateur sera ajouté à votre liste de confiance.",
       "benefitSkipReviewFuture": "Vous n'aurez pas besoin de revoir la confiance lors du prochain téléchargement à partir de celui-ci.",
