--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -491,7 +491,7 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "अज्ञात सत्यापनकर्ता",
-      "description": "सुनिश्चित करें कि आप इस सत्यापनकर्ता को पहचानते हैं या इस पर भरोसा करते हैं। \nएक बार जब आप इस सत्यापनकर्ता पर भरोसा कर लेते हैं:",
+      "description": "सुनिश्चित करें कि आप इस जारीकर्ता को पहचानते हैं या उस पर भरोसा करते हैं। \nजब आप इस सत्यापनकर्ता पर भरोसा कर लें:",
       "benefitSaveSecurely": "कार्ड आपके वॉलेट में सुरक्षित रूप से सहेजा जाएगा।",
       "benefitAddToTrustedList": "इस सत्यापनकर्ता को आपकी विश्वसनीय सूची में जोड़ा जाएगा।",
       "benefitSkipReviewFuture": "अगली बार उनसे डाउनलोड करते समय आपको फिर से भरोसे की समीक्षा करने की आवश्यकता नहीं होगी।",
