--- a/inji-web/src/locales/kn.json
+++ b/inji-web/src/locales/kn.json
@@ -491,7 +491,7 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "ಅಪರಿಚಿತ ವಿತರಕ",
-      "description": "ನೀವು ಈ ವಿತರಣೆದಾರರನ್ನು ಗುರುತಿಸುತ್ತೀರಿ ಅಥವಾ ನಂಬುತ್ತೀರಿ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ. \nಒಮ್ಮೆ ನೀವು ಈ ವಿತರಣೆದಾರರನ್ನು ನಂಬಿದರೆ:",
+      "description": "ಈ ಜಾರಿ ಮಾಡುವವರನ್ನು ನೀವು ಗುರುತಿಸುತ್ತೀರಾ ಅಥವಾ ನಂಬುತ್ತೀರಾ ಎಂಬುದನ್ನು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ. \nಈ ಪರಿಶೀಲಕರ ಮೇಲೆ ನೀವು ನಂಬಿಕೆ ಇಟ್ಟ ನಂತರ:",
       "benefitSaveSecurely": "ಕಾರ್ಡ್ ನಿಮ್ಮ ವಾಲೆಟ್‌ನಲ್ಲಿ ಸುರಕ್ಷಿತವಾಗಿ ಉಳಿಸಲಾಗುತ್ತದೆ.",
       "benefitAddToTrustedList": "ಈ ವಿತರಣೆದಾರರನ್ನು ನಿಮ್ಮ ವಿಶ್ವಾಸಾರ್ಹ ಪಟ್ಟಿಗೆ ಸೇರಿಸಲಾಗುತ್ತದೆ.",
       "benefitSkipReviewFuture": "ಮುಂದಿನ ಬಾರಿ ಅವರಿಂದ ಡೌನ್‌ಲೋಡ್ ಮಾಡುವಾಗ ನೀವು ಮತ್ತೆ ವಿಶ್ವಾಸಾರ್ಹತೆಯನ್ನು ಪರಿಶೀಲಿಸುವ ಅಗತ್ಯವಿಲ್ಲ.",
