--- a/inji-web/src/locales/ta.json
+++ b/inji-web/src/locales/ta.json
@@ -491,7 +491,7 @@
   "VerifierTrustPage": {
     "modal": {
       "title": "அறியப்படாத வழங்குநர்",
-      "description": "இந்த வழங்குநரை நீங்கள் அங்கீகரிக்கிறீர்கள் அல்லது நம்புகிறீர்கள் என்பதை உறுதிப்படுத்தவும். \nநீங்கள் இந்த வழங்குநரை நம்பிய பிறகு:",
+      "description": "இந்த வெளியீட்டாளரை நீங்கள் அறிந்தவரா அல்லது அவரை நம்புகிறீர்களா என்பதை உறுதிப்படுத்துங்கள். \nஇந்த சரிபார்ப்பவரை நீங்கள் நம்பியபின்:",
       "benefitSaveSecurely": "அட்டை உங்கள் வாலட்டில் பாதுகாப்பாகச் சேமிக்கப்படும்.",
       "benefitAddToTrustedList": "இந்த வழங்கி உங்கள் நம்பகமான பட்டியலில் சேர்க்கப்படும்.",
       "benefitSkipReviewFuture": "அடுத்த முறை இவர்களிடமிருந்து பதிவிறக்கும்போது மீண்டும் நம்பகத்தன்மையைச் சரிபார்க்கத் தேவையில்லை.",
