[INJIWEB-1735] Use of a single loading modal instead of 2 loading modals
Signed-off-by: Rudhhi Shah <rudhhi.shah@thoughtworks.com>

--- a/inji-web/src/locales/ar.json
+++ b/inji-web/src/locales/ar.json
@@ -396,7 +396,7 @@
     "success": "يتابع",
     "cancel": "يلغي"
   },
-  "LoadingModalLandscape": {
+  "ShareHandlerLoadingModal": {
     "message": "جارٍ إعداد عرض بيانات اعتمادك الآمن..."
   },
   "CredentialShareSuccessModal": {
