--- a/inji-web/src/locales/hi.json
+++ b/inji-web/src/locales/hi.json
@@ -396,7 +396,7 @@
     "success": "आगे बढ़ना",
     "cancel": "रद्द करना"
   },
-  "LoadingModalLandscape": {
+  "ShareHandlerLoadingModal": {
     "message": "आपकी सुरक्षित क्रेडेंशियल प्रस्तुति तैयार की जा रही है..."
   },
   "CredentialShareSuccessModal": {
