--- a/inji-web/src/locales/pt.json
+++ b/inji-web/src/locales/pt.json
@@ -396,7 +396,7 @@
     "success": "Prosseguir",
     "cancel": "Cancelar"
   },
-  "LoadingModalLandscape": {
+  "ShareHandlerLoadingModal": {
     "message": "Preparando sua apresentação de credencial segura..."
   },
   "CredentialShareSuccessModal": {
